# RichardsonMethod

./: .gitignire  Bend.cpp  CMakeLists.txt  CMakeLists.txt.user.1d9dab7  CMakeLists.txt.user.3.2-pre1  Filtration.cpp  a.out  common.cpp  common.cpp.autosave  common.h  common.h.autosave  crsmatrix.cpp  crsmatrix.h  data10.txt  data6.txt  functions.cpp  functions.h  gnuplot.h  main.cpp  module1.h  normalmatrix.cpp  normalmatrix.h  plots.cpp  plots.h  plots.h.autosave  richardsonMethodWithChebyshevOrderedSetOfParameters.cpp  richardsonMethodWithChebyshevOrderedSetOfParameters.cpp.autosave  richardsonMethodWithChebyshevOrderedSetOfParameters.h  richardsonslau.cpp  richardsonslau.h
build-gui-Desktop-Debug/: Makefile  gui  moc_mainwindow.cpp  ui_mainwindow.h  y10  y100  y1000  y10000  y100000  y1000000  y10000000  y100000000  y1000000000  y10000000000  y100000000000  y1000000000000  y10000000000000  y100000000000000  y1000000000000000  y10000000000000000  y100000000000000000
gui/: gui.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
matrix/: basematrix.cpp  basematrix.h  crsmatrix.cpp  crsmatrix.h  normalmatrix.cpp  normalmatrix.h
